--- a/tower-json-rpc/Cargo.toml
+++ b/tower-json-rpc/Cargo.toml
@@ -1,7 +1,17 @@
 [package]
 name = "tower-json-rpc"
-version = "0.1.0"
-edition = "2024"
+description = "tower native JSON-RPC server and client implementation"
+version.workspace = true
+authors.workspace = true
+edition.workspace = true
+rust-version.workspace = true
+license.workspace = true
+repository.workspace = true
+documentation.workspace = true
+homepage.workspace = true
+keywords.workspace = true
+readme.workspace = true
+publish = true
 
 [dependencies]
 thiserror.workspace = true
