--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ hyper-rustls = { version = "0.27.0", features = ["ring"] }
 http-body-util = "0.1"
 futures-channel = "0.3"
 trybuild = "1"
+axum = "0.8"
 
 # hyper = { version = "1", features = ["server", "http1"] }
 # tower = { version = "0.5", features = ["util"] }
