--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ futures = "0.3"
 futures-util = "0.3"
 hyper = { version = "1", features = ["full"] }
 jsonrpsee-types = "0.26"
+jsonrpsee = { version = "0.26", default-features = false }
 
 proc-macro2 = "1"
 quote = "1"
